force-app/main/default/objects/Certification_Study_Plan__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <length>255</length>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Platform App Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <visibilityPublic</visibilityPublic>
</CustomField>