force-app/main/default/objects/Certification_Study_Plan__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <label>Target Date</label>
    <required>true</required>
    <type>Date</type>
    <visibilityPublic</visibilityPublic>
</CustomField>